Closed Bug 1462499 Opened 6 years ago Closed 6 years ago

Priority of Android malware matches in Safe Browsing is wrong

Categories

(Toolkit :: Safe Browsing, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: francois, Assigned: Kammueller)

References

Details

(Keywords: good-first-bug)

Attachments

(1 file)

The priority of the "HARMFUL" Safe Browsing category is wrong. It should be the same (or just after) "MALWARE":

https://searchfox.org/mozilla-central/rev/da499aac682d0bbda5829327b60a865cbc491611/toolkit/components/url-classifier/nsUrlClassifierDBService.cpp#89-91
Assignee: nobody → matthias
Status: NEW → ASSIGNED
Comment on attachment 9011209 [details]
Bug 1462499 - changed priority of harmful. r?francois

François Marier [:francois] has approved the revision.
Attachment #9011209 - Flags: review+
Has this patch landed = can we mark this bug as fixed?
Flags: needinfo?(francois)
Pushed by fmarier@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/10d5db1fc33f
changed priority of harmful. r=francois
(In reply to :Matthias Kammüller from comment #3)
> Has this patch landed = can we mark this bug as fixed?

Not yet, the landing had never been requested.

I just did this. It should land in the next few hours. Thanks for the ping.
Flags: needinfo?(francois)
https://hg.mozilla.org/mozilla-central/rev/10d5db1fc33f
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: