Bug 1462499 - changed priority of harmful. r=francois

Differential Revision: https://phabricator.services.mozilla.com/D6570